--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -85,12 +85,12 @@
                                             Blog
                                         </a>
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="font-size:13px">
-                                            <a class="dropdown-item" href="~/?category=relationship_and_marriage#blog">Relationship & Marriage</a>
-                                            <a class="dropdown-item" href="~/?category=sports#blog">Sports</a>
+                                            <a class="dropdown-item" href="~/blog/index/?category=relationship_and_marriage#blog">Relationship & Marriage</a>
+                                            <a class="dropdown-item" href="~/blog/index/?category=sports#blog">Sports Corner</a>
 
-                                            <a class="dropdown-item" href="~/?category=politics#blog">Politics</a>
-                                            <a class="dropdown-item" href="~/?category=career#blog">Career</a>
-                                            <a class="dropdown-item" href="~/?category=general#blog">General</a>
+                                            <a class="dropdown-item" href="~/blog/index/?category=politics#blog">Politics</a>
+                                            <a class="dropdown-item" href="~/blog/index/?category=career#blog">Career</a>
+                                            <a class="dropdown-item" href="~/blog/index/?category=general#blog">General</a>
                                         </div>
                                     </li>
                                     <li class="nav-item dropdown  @(supportLink? "active" : "")">
@@ -155,10 +155,10 @@
                         <div class="col-md-3 col-sm-6 col-6 p-0  float-left text-center">
                             <h4 class="font-weight-bold text-uppercase">Blog</h4>
                             <ul class="list-group">
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=relationship_and_marriage#blog">Relationship & Marriage</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=careere#blog">Career</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=sports#blog">Sports</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=politics#blog">Politics</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=relationship_and_marriage#blog">Relationship & Marriage</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=careere#blog">Career</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=sports#blog">Sports</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=politics#blog">Politics</a></li>
                             </ul>
                         </div>
 
@@ -219,10 +219,10 @@
                         <div class="col-md-6 col-sm-6 col-6 p-0 mb-3 float-left text-center">
                             <h4 class="font-weight-bold text-uppercase">Blog</h4>
                             <ul class="list-group">
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=relationship_and_marriage#blog">Relationship & Marriage</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=careere#blog">Career</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=sports#blog">Sports</a></li>
-                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/?category=politics#blog">Politics</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=relationship_and_marriage#blog">Relationship & Marriage</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=careere#blog">Career</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=sports#blog">Sports</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~/blog/index/?category=politics#blog">Politics</a></li>
                             </ul>
                         </div>
 
